-from home : adapted to MySql

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,10 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQD16\\SQL16;Database=ECDCNewMIS2017;User ID=MISV2AppUser;Password=Ethics01;MultipleActiveResultSets=true"
+   // "DefaultConnection": "Server=NSQD16\\SQL16;Database=ECDCNewMIS2017;User ID=MISV2AppUser;Password=Ethics01;MultipleActiveResultSets=true"
     //"DefaultConnection": Server=ecdcntsql08.ecdcntest.local;Database=ECDCNewMIS;User ID=MISV2AppUser;Password=Ethics01;MultipleActiveResultSets=true",
    // "DefaultConnection": "Server=NSQL8;Database=ECDCNewMIS;User ID=MISV2AppUser;Password=Ethics01;MultipleActiveResultSets=true"
-
+   "DefaultConnection": "Server=localhost;Database=ecdcnewmis;Uid=root;Pwd=Solna123@;SslMode=none;",
+   "providerName": "MySql.Data.MySqlClient"
   },
 
   "Logging": {
